src/FinancialForce Accounting/objects/codaBankStatement__c.object
<CustomObject>
    <customHelpPage>codahelpbankstatement</customHelpPage>
    <description>Stores imported bank statement master details.</description>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Bank Statements</relationshipLabel>
        <relationshipName>BankStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Reconciliation</label>
        <referenceTo>codaBankReconciliation__c</referenceTo>
        <relationshipLabel>Bank Statements</relationshipLabel>
        <relationshipName>BankStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClosingBalance__c</fullName>
        <label>Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OpeningBalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opening Balance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Bank Statements</relationshipLabel>
        <relationshipName>BankStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatementDate__c</fullName>
        <label>Statement Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Imported</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Committing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank Statement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BankAccount__c</columns>
        <columns>StatementDate__c</columns>
        <columns>Reference__c</columns>
        <columns>OpeningBalance__c</columns>
        <columns>ClosingBalance__c</columns>
        <columns>BankReconciliation__c</columns>
        <columns>Status__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BS{0000}</displayFormat>
        <label>Bank Statement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>